[gd_scene load_steps=12 format=3 uid="uid://cwcy10siqhc2y"]

[ext_resource type="Theme" uid="uid://fb64r7sbqq14" path="res://UI/UIResources/Style/GameTheme.tres" id="1_xf3tn"]
[ext_resource type="Script" path="res://UI/Scripts/GameUI.gd" id="2_2k75m"]
[ext_resource type="Script" path="res://UI/Scripts/HealthUI.gd" id="3_1byg2"]
[ext_resource type="Texture2D" uid="uid://musxjvcx0pot" path="res://UI/UIResources/AtlasCutoffs/HealthTextureNull.tres" id="4_7mof8"]
[ext_resource type="Script" path="res://UI/Scripts/ScoreUI.gd" id="4_ru4lt"]
[ext_resource type="Texture2D" uid="uid://b2bq2x16x1vw3" path="res://UI/UIResources/AtlasCutoffs/MenuIcon.tres" id="5_d5ol4"]
[ext_resource type="Texture2D" uid="uid://7c0gs86n8hem" path="res://UI/UIResources/AtlasCutoffs/HealthTextureFull.tres" id="5_skern"]
[ext_resource type="Script" path="res://UI/Scripts/Mobile.gd" id="8_bye1c"]
[ext_resource type="Texture2D" uid="uid://c6187sa0cf3wg" path="res://Game/Sprites/bg.png" id="8_yh7ni"]

[sub_resource type="InputEventKey" id="InputEventKey_b3i0q"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_54omh"]
events = [SubResource("InputEventKey_b3i0q")]

[node name="GameUI" type="Control"]
process_mode = 1
z_index = 21
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_xf3tn")
script = ExtResource("2_2k75m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -904.0
offset_top = -492.0
offset_right = 904.0
offset_bottom = 487.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
ratio = 2.2379
alignment_horizontal = 0

[node name="HealthUI" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/AspectRatioContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("3_1byg2")

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/AspectRatioContainer2/HealthUI"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
nine_patch_stretch = true
texture_under = ExtResource("4_7mof8")
texture_progress = ExtResource("5_skern")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/AspectRatioContainer2/HealthUI"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
nine_patch_stretch = true
texture_under = ExtResource("4_7mof8")
texture_progress = ExtResource("5_skern")

[node name="ScoreUI" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("4_ru4lt")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ScoreUI"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[center]scoreText"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ScoreUI"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[center]diffText"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment_horizontal = 2

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
z_index = 20
layout_mode = 2
focus_mode = 1
shortcut = SubResource("Shortcut_54omh")
icon = ExtResource("5_d5ol4")
icon_alignment = 1
expand_icon = true

[node name="MobileMovement" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 2
alignment = 1
script = ExtResource("8_bye1c")

[node name="LeftButton" type="Button" parent="VBoxContainer/MobileMovement"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
disabled = true
action_mode = 0

[node name="RightButton" type="Button" parent="VBoxContainer/MobileMovement"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
disabled = true
action_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.678944, 0.678944, 0.678944, 1)
z_index = -20
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_yh7ni")
expand_mode = 1
stretch_mode = 6

[connection signal="update_difficulty" from="VBoxContainer/HBoxContainer/ScoreUI" to="VBoxContainer/HBoxContainer/ScoreUI" method="_on_update_difficulty"]
[connection signal="update_score" from="VBoxContainer/HBoxContainer/ScoreUI" to="VBoxContainer/HBoxContainer/ScoreUI" method="_on_update_score"]
